--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.6",
-    "@supabase/supabase-js": "^2.44.4",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^7.6.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
     "server": "file:.."
