--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.6",
-    "axios": "^1.7.2",
+    "axios": "^1.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
@@ -20,7 +20,8 @@
     "react-router-dom": "^7.6.0",
     "react-toastify": "^10.0.5",
     "redux-persist": "^6.0.0",
-    "server": "file:.."
+    "server": "file:..",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
@@ -35,7 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
-    "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   }
 }
